Feat: Avança na criação das regras de negócio para o pleno funcionamento do app